# xcpc-emulator

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.Linux  Makefile.OSF  Makefile.Solaris  Makefile.am  README  README.md  acinclude.m4  configure.ac
lib/: Makefile.am
lib/Gem/: Makefile.am  gememulator-impl.h  gememulator-priv.h  gememulator.c  gememulator.h
lib/Xem/: AppShell.c  AppShell.h  AppShellP.h  DlgShell.c  DlgShell.h  DlgShellP.h  Emulator.c  Emulator.h  EmulatorI.h  EmulatorP.h  Makefile.am  StringDefs.h
lib/dev/: Makefile.am  ay8910.c  ay8910.h  cpckbd.c  cpckbd.h  cpcmem.c  cpcmem.h  device.c  device.h  fdc765.c  fdc765.h  fdd765.c  fdd765.h  garray.c  garray.h  i8255.c  i8255.h  lib765.c  lib765.h  libdsk.c  libdsk.h  mc6845.c  mc6845.h  upd765.c  upd765.h  z80cpu.c  z80cpu.h  z80cpu_opcode.h  z80cpu_opcode_DD.h  z80cpu_opcode_XX.h  z80cpu_tables.h
lib/gtk3/: Makefile.am  gememulator-impl.h  gememulator-priv.h  gememulator.c  gememulator.h
lib/gtk4/: Makefile.am
lib/lib765/: 765.h  765fdc.c  765ldsk.c  Makefile.am
lib/libdsk/: Makefile.am  comp.h  compbz2.c  compbz2.h  compdskf.c  compdskf.h  compgz.c  compgz.h  compi.h  compress.c  compress.h  compress.inc  compsq.c  compsq.h  comptlzh.c  comptlzh.h  compzip.c  compzip.h  drivers.h  drivers.inc  drv.h  drvadisk.c  drvadisk.h  drvcfi.c  drvcfi.h  drvcpcem.c  drvcpcem.h  drvdos16.c  drvdos16.h  drvdos32.c  drvdos32.h  drvdskf.c  drvdskf.h  drvi.h  drvimd.c  drvimd.h  drvint25.c  drvint25.h  drvjv3.c  drvjv3.h  (+63 more)
lib/miniaudio/: Makefile.am  miniaudio.c
lib/xcpc/: Makefile.am  blitter-impl.h  blitter-priv.h  blitter.c  blitter.h  builtin-roms-impl.h  builtin-roms-priv.h  builtin-roms.c  builtin-roms.h  joystick-impl.h  joystick-priv.h  joystick.c  joystick.h  keyboard-impl.h  keyboard-priv.h  keyboard.c  keyboard.h  keysyms.h  libxcpc-cxx.h  libxcpc-events.h  libxcpc-impl.h  libxcpc-keysyms.h  libxcpc-priv.h  libxcpc.c  libxcpc.cc  libxcpc.h  monitor-impl.h  monitor-priv.h  monitor.c  monitor.h  ppi-8255-impl.h  ppi-8255-priv.h  ppi-8255.c  ppi-8255.h  psg-8910-impl.h  psg-8910-priv.h  psg-8910.c  psg-8910.h  ram-bank-impl.h  ram-bank-priv.h  (+27 more)
lib/xcpc/blitter/: blitter-impl.h  blitter-priv.h  blitter.c  blitter.h
lib/xcpc/builtin-roms/: builtin-roms-impl.h  builtin-roms-priv.h  builtin-roms.c  builtin-roms.h
lib/xcpc/cpu-z80a/: cpu-z80a-defs.h  cpu-z80a-impl.h  cpu-z80a-microcode.h  cpu-z80a-opcodes-cb.inc  cpu-z80a-opcodes-dd.inc  cpu-z80a-opcodes-ddcb.inc  cpu-z80a-opcodes-ed.inc  cpu-z80a-opcodes-fd.inc  cpu-z80a-opcodes-fdcb.inc  cpu-z80a-opcodes-op.inc  cpu-z80a-opcodes-xx.inc  cpu-z80a-opcodes-xy.inc  cpu-z80a-opcodes.inc  cpu-z80a-priv.h  cpu-z80a.c  cpu-z80a.h
lib/xcpc/fdc-765a/: fdc-765a-impl.h  fdc-765a-priv.h  fdc-765a.c  fdc-765a.h
lib/xcpc/glue/: backend.c  backend.h  frontend.c  frontend.h
lib/xcpc/joystick/: joystick-impl.h  joystick-priv.h  joystick.c  joystick.h
lib/xcpc/keyboard/: keyboard-impl.h  keyboard-priv.h  keyboard.c  keyboard.h
lib/xcpc/machine/: machine-impl.h  machine-priv.h  machine.c  machine.h
lib/xcpc/monitor/: monitor-impl.h  monitor-priv.h  monitor.c  monitor.h
lib/xcpc/options/: options-impl.h  options-priv.h  options.c  options.h
lib/xcpc/ppi-8255/: ppi-8255-impl.h  ppi-8255-priv.h  ppi-8255.c  ppi-8255.h
lib/xcpc/psg-8910/: psg-8910-impl.h  psg-8910-priv.h  psg-8910.c  psg-8910.h
lib/xcpc/ram-bank/: ram-bank-impl.h  ram-bank-priv.h  ram-bank.c  ram-bank.h
lib/xcpc/rom-bank/: rom-bank-impl.h  rom-bank-priv.h  rom-bank.c  rom-bank.h
lib/xcpc/settings/: settings-impl.h  settings-priv.h  settings.c  settings.h
lib/xcpc/snapshot/: snapshot.c  (+11 more)
src/: Makefile.am  XArea.c  XArea.h  XAreaP.h  Z80Core.h  Z80Opcodes.h  Z80OpcodesDD.h  Z80OpcodesDDCB.h  Z80OpcodesED.h  Z80OpcodesFD.h  Z80OpcodesFDCB.h  Z80OpcodesXX.h  amstrad-cpc.c  amstrad-cpc.h  amstrad_cpc.c  amstrad_cpc.h  ay_3_8910.c  ay_3_8910.h  common.c  common.h  config.c  config.h  cpu_z80.c  cpu_z80.h  crtc_6845.c  crtc_6845.h  endian.c  fdc_765.c  fdc_765.h  ppi_8255.c  ppi_8255.h  xawcpc.c  xcpc-athena-priv.h  xcpc-athena.c  xcpc-athena.h  xcpc-gtk3-priv.h  xcpc-gtk3.c  xcpc-intrinsic-priv.h  xcpc-intrinsic.c  xcpc-intrinsic.h  (+21 more)
src/Xem/: AppShell.c  AppShell.h  AppShellP.h  DlgShell.c  DlgShell.h  DlgShellP.h  Emulator.c  Emulator.h  EmulatorP.h  Makefile.am  StringDefs.h  XArea.h
src/athena/: xcpc-athena-priv.h  xcpc-athena.c  xcpc-athena.h
src/dev/: Makefile.am  ay8910.c  ay8910.h  cpckbd.c  cpckbd.h  cpcmem.c  cpcmem.h  device.c  device.h  fdc765.c  fdc765.h  fdd765.c  fdd765.h  garray.c  garray.h  i8255.c  i8255.h  lib765.c  lib765.h  libdsk.c  mc6845.c  mc6845.h  upd765.c  upd765.h  z80cpu.c  z80cpu.h  z80cpu_opcode.h  z80cpu_opcode_CB.h  z80cpu_opcode_DD.h  z80cpu_opcode_DDCB.h  z80cpu_opcode_ED.h  z80cpu_opcode_FD.h  z80cpu_opcode_FDCB.h  z80cpu_opcode_XX.h  z80cpu_opcode_XXCB.h  z80cpu_tables.h
src/drv/: Makefile.am  arnold.c  arnold.h  driver.c  driver.h
src/gtk3/: xcpc-gtk3-priv.h  xcpc-gtk3.c  xcpc-gtk3.h
src/gtk3ui/: Makefile.am  all.cc  all.h  gdk3-pixbuf.cc  gdk3-pixbuf.h  gtk3-about-dialog.cc  gtk3-about-dialog.h  gtk3-application-window.cc  gtk3-application-window.h  gtk3-application.cc  gtk3-application.h  gtk3-base.cc  gtk3-base.h  gtk3-bin.cc  gtk3-bin.h  gtk3-box.cc  gtk3-box.h  gtk3-button.cc  gtk3-button.h  gtk3-container.cc  gtk3-container.h  gtk3-dialog.cc  gtk3-dialog.h  gtk3-emulator-ogl.cc  gtk3-emulator-ogl.h  gtk3-emulator-x11.cc  gtk3-emulator-x11.h  gtk3-emulator.cc  gtk3-emulator.h  gtk3-file-chooser-dialog.cc  gtk3-file-chooser-dialog.h  gtk3-frame.cc  gtk3-frame.h  gtk3-gl-area.cc  gtk3-gl-area.h  gtk3-grid.cc  gtk3-grid.h  gtk3-label.cc  gtk3-label.h  gtk3-menu-bar.cc  (+45 more)
src/gtk4/: xcpc-gtk4-priv.h  xcpc-gtk4.c  xcpc-gtk4.h
src/gtk4ui/: Makefile.am  xcpc-main.cc  xcpc-main.h
src/intrinsic/: xcpc-intrinsic-priv.h  xcpc-intrinsic.c  xcpc-intrinsic.h
src/motif2/: xcpc-motif2-priv.h  xcpc-motif2.c  xcpc-motif2.h
src/utils/: Makefile.am  arglist.cc  arglist.h  console.cc  console.h  program.cc  program.h  xcpc-dsk.cc  xcpc-dsk.h
(+148 files in other folders)
